Fix button text overflow in main interface

--- a/nodel-webui-js/src/theme.less
+++ b/nodel-webui-js/src/theme.less
@@ -586,6 +586,12 @@ div.nodel-actsig {
   .enable {
     float: left;
   }
+  button {
+    overflow: hidden;
+    max-width: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
 div.nodel-console, div.nodel-serverlog {
   height: 160px;
